# varianth

./: .gitignore  Cargo.toml  README.md
hvariant/src/: getrf.rs  ms.rs  readinfo.rs
mpileup-rs/: .gitignore  Cargo.toml  README.Rmd  README.md  notes.md  smtools.txt
mpileup-rs/src/: lib.rs  main.rs
mpileup-rs/src/column/: column.rs  errors.rs  iterators.rs  mod.rs  operations.rs
mpileup-rs/src/rmpio/: bamread.rs  mod.rs
src/: core.rs  getrf.rs  main.rs  readinfo.rs
varianth-cli/: Cargo.toml
varianth-cli/src/: main.rs
varianth-cli/src/cmd/: kmercount.rs  mod.rs  ms.rs
varianth-core/: Cargo.toml
varianth-core/src/: lib.rs  position.rs
