[package]
name = "hvariant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
noodles = { version = "0.51.0", features = ["vcf", "core", "bgzf", "csi", "tabix", "fasta", "bam", "sam", "bed"] }
serde_json = "1.0.108"
